--- a/projectAnalytics.css
+++ b/projectAnalytics.css
@@ -1,8 +1,19 @@
-.graph-container {
+html,
+body {
+    height: 100%;
+}
+
+.chart-container {
     width: 100%;
     height: 60vh;
-
 }
+
+.spreadsheet-container {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden
+}
+
 
 #graph {
     width: 100%;
