--- a/projectAnalytics.css
+++ b/projectAnalytics.css
@@ -11,11 +11,39 @@ body {
 .spreadsheet-container {
     width: 100%;
     height: 100vh;
-    overflow: hidden
+    overflow: scroll
 }
+
 
 
 #graph {
     width: 100%;
     height: 60vh;
+}
+
+#CTR-content {}
+
+
+.loader {
+    position: absolute;
+    left: 47%;
+    top: 47%;
+    border-top: 16px solid blue;
+    border-right: 16px solid green;
+    border-bottom: 16px solid red;
+    border-left: 16px solid pink;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
